--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   http: ^0.13.4
   font_awesome_flutter: ^9.2.0
   intl: ^0.17.0
+  easy_debounce: ^2.0.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
